--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="experience_show col-lg-12">
-      <div class="experience_show_icon col-xs-12 col-md-4">
+    <div class="experience_show col-sm-12">
+      <div class="experience_show_icon col-sm-12 col-md-4">
         <%= image_tag(@experience.icon.url) if @experience.icon && @experience.icon.url %>
       </div>
-        <div class="experience_show_table col-xs-12 col-md-12">
+        <div class="experience_show_table col-sm-12 col-md-8">
           <table>
             <tr>
               <th>タイトル</th><td><%= @experience.title %></td>
@@ -16,22 +16,19 @@
               <th>実施手順</th><td>
                 <%=safe_join(@experience.procedure.split("\n"),tag(:br))%></td>
             </tr>
+            <tr>
+                <div class="like"><th><p>心霊現象起きた?</p></th><td><%= button_to '起きた!!', experience_watches_path(@experience) %></td></div>
+            </tr>
         </table>
       </div>
     </div>
-    <div class="col-xs-6">
-
-    </div>
-    <div class="col-xs-6">
-      <p>コメント一覧</p>
+    <div class="col-sm-12">
+      <p><コメント一覧></p>
+      <hr>
       <div id="opinions_area">
         <%= render partial: 'opinions/index', locals: { opinions: @opinions, experience: @experience } %>
       </div>
       <%= render partial: 'opinions/form', locals: { opinion: @opinion, experience: @experience } %>
-    </div>
-    <div class="like">
-      <p>心霊現象起きた?</p>
-      <%= button_to '起きた!!', experience_watches_path(@experience) %>
     </div>
   </div>
 </div>
