--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,11 @@
    margin-bottom: 20px;
  }
 
+ .field img{
+   width: 400px;
+   height: 300px;
+ }
+
  .navbar {
    background-color: #3a3f4f;
  }
@@ -30,6 +35,10 @@
   color: #c1c2c7;
   margin: 0 33px 0 33px;
   font-family: tahoma, verdana, arial, helvetica, sans-serif;
+}
+
+hr {
+  background-color: #c1c2c7;
 }
 
 p, ol, ul, td, a {
@@ -137,8 +146,8 @@ video  {
  }
 
 .movie_index video {
+  max-width: 100%;
   height: 300px;
-  width: 100%;
   margin-right: 20px;
 }
 
@@ -147,8 +156,13 @@ video  {
 }
 
 .movie-show video {
-  width: 600px;
-  height: 500px;
+  max-width: 100%;
+  height: 400px;
+}
+
+.movie-show-button {
+  width: 100%;
+  text-align: right;
 }
 
 .user_index {
@@ -223,26 +237,23 @@ video  {
   padding: 15px 0px 15px 0px;
 }
 
-.experience_index_icon img {
-  height: 250px;
-  width: 100%;
+.experience_show_icon {
   float: left;
-  margin-right: 20px;
+  margin: 20px 0 20px 0;
+}
+
+.experience_show_table {
+  float: left;
+  margin-top: -20px;
 }
 
 .experience_show table th {
-  width: 100px;
+  width: 150px;
   height: 100px;
 }
 
 .experience_show table td {
   height: 100px;
-}
-
-.experience_show_icon img {
-  float: left;
-  margin-right: 20px;
-  margin-top: 15px;
 }
 
 .map_event_index {
@@ -292,4 +303,27 @@ video  {
 
 .card-header {
   height: 30px;
+}
+
+ul {
+  list-style: none;
+}
+
+li span {
+  margin-right: 50px;
+  margin-left: -40px;
+}
+
+.fields textarea {
+  width: 100%;
+}
+
+table.experience{
+  border-collapse:collapse;
+  margin:0 auto;
+}
+
+.experience td,.experience th{
+  border:1px solid #ccc;
+  padding:10px;
 }
