--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,3 @@
-<h2><%= t('.title', resource: resource_name.to_s.humanize) %></h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
@@ -63,7 +61,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :icon %>*
+    <%= f.label :icon %>*<br>
     <%= image_tag(@user.icon.url) if @user.icon && @user.icon.url %><br>
     <%= f.file_field :icon %>
     <%= f.hidden_field :icon_cache %>
