--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,22 +7,22 @@
         <div class="event_show_table col-sm-12 col-md-6 col-lg-8">
           <table>
             <tr>
-              <th>タイトル</th><td>:<%= @event.title %></td>
+              <th>タイトル</th><td><%= @event.title %></td>
             </tr>
             <tr>
-              <th>開催地</th><td>:<%= @event.address %></td>
+              <th>開催地</th><td><%= @event.address %></td>
             </tr>
             <tr>
-              <th>開催日時</th><td>:<%= @event.day_time_at %></td>
+              <th>開催日時</th><td><%= @event.day_time_at %></td>
             </tr>
             <tr>
-              <th>催行人数</th><td>:<%= @event.participant_number %></td>
+              <th>催行人数</th><td><%= @event.participant_number %></td>
             </tr>
             <tr>
-              <th>開催概要</th><td>:<%= @event.outline %></td>
+              <th>開催概要</th><td><%= @event.outline %></td>
             </tr>
             <tr>
-              <th>開催内容</th><td>:<%= @event.content %></td>
+              <th>開催内容</th><td><%= @event.content %></td>
             </tr>
         </table>
       </div>
@@ -34,19 +34,19 @@
         <div class="event_show_usertable col-sm-12 col-md-6 col-lg-8">
           <table>
             <tr>
-              <th>主催者名</th><td>:<%= @event.user.name %></td>
+              <th>主催者名</th><td><%= @event.user.name %></td>
             </tr>
             <tr>
-              <th>性別</th><td>:<%= @event.user.sex %></td>
+              <th>性別</th><td><%= @event.user.sex %></td>
             </tr>
             <tr>
-              <th>メール</th><td>:<%= @event.user.email %></td>
+              <th>メール</th><td><%= @event.user.email %></td>
             </tr>
             <tr>
-              <th>携帯番号</th><td>:<%= @event.user.mobile_number %></td>
+              <th>携帯番号</th><td><%= @event.user.mobile_number %></td>
             </tr>
             <tr>
-              <th>自己紹介</th><td>:<%= @event.user.introduction %></td>
+              <th>自己紹介</th><td><%= @event.user.introduction %></td>
             </tr>
         </table>
       </div>
