デザイン修正

--- a/app/views/opinions/_edit.html.erb
+++ b/app/views/opinions/_edit.html.erb
@@ -9,9 +9,8 @@
       </ul>
     </div>
   <% end %>
-  <div class="field">
+  <div class="fields">
     <%= form.text_area :content, id: "opinion_content_#{experience.id}" %>
-    <%= form.label :content %>
   </div>
   <div class="actions">
     <%= form.submit %>
