--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,7 +9,7 @@
         <%= form.label :day_time_at_gteq, "開催日", class: "col-sm-2 col-form-label" %>
         <%= form.date_select :day_time_at_gteq, {use_month_numbers: true, start_year: (Date.today).year, include_blank: true } %>
 
-        <%= form.label :day_time_at_gteq, "〜", class: "col-form-label" %>
+        <%= form.label :day_time_at_gteq, "~", class: "col-form-label" %>
         <%= form.date_select :day_time_at_lteq, {use_month_numbers: true, start_year: (Date.today).year, include_blank: true } %>
       </div>
       <div class="form-group">
